--- a/style.css
+++ b/style.css
@@ -8,4 +8,88 @@
 
 body {
   font-family: 'Inter', sans-serif;
+  width: 100%;
+  height: 100vh;
+  background-color: #363062;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background-color: #4d4c7d;
+  color: #f5f5f5;
+  width: 450px;
+  padding: 40px;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.result-group {
+  width: 100%;
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.result-group input {
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 10px 20px;
+}
+
+.result-group .clipboard-btn {
+  width: 12%;
+  height: 100%;
+  background-color: #f99417;
+
+  position: absolute;
+  right: 0;
+  top: 0;
+  border: none;
+  cursor: pointer;
+}
+
+.result-group .clipboard-btn:active {
+  background-color: #f7a644;
+}
+
+.result-group .clipboard-btn i {
+  font-size: 18px;
+}
+
+.question-group {
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.question-group label {
+  font-size: 18px;
+}
+
+.question-group input[type='number'] {
+  width: 14%;
+  padding: 5px;
+  border: none;
+  outline: none;
+}
+
+.generate-btn {
+  width: 100%;
+  background-color: #f99417;
+  border: none;
+  cursor: pointer;
+  padding: 8px 0px;
+  font-size: 18px;
+}
+
+.generate-btn:active {
+  background-color: #f7a644;
 }
